--- a/components/ai_chat/resources/page/components/main/style.module.scss
+++ b/components/ai_chat/resources/page/components/main/style.module.scss
@@ -126,7 +126,7 @@
 }
 
 .conversationList {
-  background: white;
+  background: var(--leo-color-container-background);
   position: absolute;
   z-index: 4;
   width: 100%;
