--- a/components/ai_chat/resources/page/components/sidebar_header/style.module.scss
+++ b/components/ai_chat/resources/page/components/sidebar_header/style.module.scss
@@ -17,6 +17,7 @@
   --gap: 12px;
   display: flex;
   align-items: center;
+  color: var(--leo-color-icon-default);
   gap: var(--gap);
 }
 
